# SpineSurgicalPlanning

./: .gitignore  README.md  SpineSurgicalPlanning.py
SpinePlanning/: PedicleSurgeryPlanning_deployment.py
SpinePlanning/PCA_coordinate_creation/: create_coordinate.py
SpinePlanning/tools/: SpineTopPlane.py  adjust_coord.py  calculate_center_point.py  convert_nii2stl.py  coordinate_registration.py  template_coordinate.py  test_get_spine_info.py  vtk_tools.py
SpineSeg/: LICENSE  README.md  classifier.py  consistency_loop.py  environment.yml  evaluate.ipynb  graph.py  identify.py  locate.py  metrics.py  regressor.py  segment_spine.py  segment_vertebra.py  segmentor.py  test.py  test_DRR.py  test_multi.py  test_verse.py  utils.py
SpineSeg/PySiddonGPU/: CMakeLists.txt  gernerateDRR.py
SpineSeg/PySiddonGPU/src/: pywrapper.cpp  siddon_class.cu  siddon_class.cuh
SpineSeg/PySiddonGPU/tools/: copy_file.py  create_data_file.py  create_mask_bbox.py  create_mask_bbox_L1_L5.py  load_drr_front_view_show.py  load_drr_show.py  load_drr_side_view_show.py  remove_bad_file.py
SpineSeg/statistics/: vertebrae_interval_distributions_coeff.pkl  vertebrae_sizes.pkl
SpineSeg/tools/: load_npy2show.py
SpineSeg/train/: class_weight.py  data_generator.py  data_loader.py  losses.py  train_classifier.py  train_segmentor.py  utils_trainer.py
SpineSeg/yolov5/: detect.py  export.py
SpineSeg/yolov5/utils/: augmentations.py  autoanchor.py  dataloaders.py  downloads.py  general.py  metrics.py  plots.py  torch_utils.py
utils/: file_operations.py  get_all_subfolder_dcm_files.py
